# jmaths

./: .clang-format  .gitignore  BOOST_ABI_FIX.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPLETE_ISSUE_ANALYSIS.md  CONTRIBUTING.md  Config.cmake.in  DOCUMENTATION_INDEX.md  FINAL_CHECKLIST.md  GCC15_BINUTILS_ISSUE.md  GCC15_REQUIREMENTS.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GITHUB_FIX_SUMMARY.md  GITHUB_SETUP_GUIDE.md  LIBRARY_BEHAVIOR_ANALYSIS.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  REPOSITORY_STATUS.md  SECURITY.md  TESTING_STRATEGY.md  TEST_CORRECTIONS_SUMMARY.md  WORKFLOWS.md  algorithm_documentation.md  build_install_posix.sh  build_install_windows.cmd  configure  configure.cpp  custom_dependencies  default_user_settings.cfg  default_user_settings32.cfg  defaults_list.cfg  defaults_list32.cfg  dependencies  jmaths.cpp  jmaths.hpp  jmaths_N.cpp  jmaths_Q.cpp  (+14 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/docs/: README.md  SETUP_GUIDE.md
.github/workflows/: ci.yml  coverage.yml  dependency-check.yml  documentation.yml  release.yml  security.yml
benchmarks/: BENCHMARKING_GUIDE.md  CMakeLists.txt  QUICK_START.md  README.md  analyze_benchmark.py  benchmark_comprehensive.cpp
config/: configure.cpp  default_user_settings.cfg  default_user_settings32.cfg  defaults_list.cfg  defaults_list32.cfg  dependencies.hpp  jmaths_aliases.hpp  jmaths_def.cfg  jmaths_undef.cfg
doc/: API_Reference.md  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  EXCEPTION_REFERENCE.md  GCC15_REQUIREMENTS.md  KNOWN_ISSUES.md  QUICK_REFERENCE.md  SAMPLES_GUIDE.md  The jmaths library for C++ (1.0.0).pages  WORKFLOWS.md  algorithm_documentation.md  fig_terminal_comparison_example.cpp  manual-1_0_0.pages
jmaths.xcodeproj/: project.pbxproj
jmaths.xcodeproj/project.xcworkspace/xcuserdata/jasper.xcuserdatad/: UserInterfaceState.xcuserstate
jmaths.xcodeproj/xcshareddata/xcschemes/: jmaths.xcscheme
jmaths.xcodeproj/xcuserdata/jasper.xcuserdatad/xcschemes/: xcschememanagement.plist
samples/: CMakeLists.txt  README.md  fig_terminal_comparison_example.cpp  fig_terminal_n_random_example.cpp  fig_terminal_q_fits_into_example.cpp  fig_terminal_z_random_example.cpp  my_little_sample.cpp
src/: CMakeLists.txt  N.cpp  N_detail.cpp  Q.cpp  Q_detail.cpp  Z.cpp  Z_detail.cpp  calc.cpp  default_user_settings.cfg  dependencies.hpp  detail_N.cpp  detail_Q.cpp  detail_Z.cpp  error.cpp  function_timer.hpp  hash.cpp  jmaths.hpp  jmaths_N.cpp  jmaths_Q.cpp  jmaths_Z.cpp  jmaths_calc.cpp  jmaths_detail_N.cpp  jmaths_detail_Q.cpp  jmaths_detail_Z.cpp  jmaths_error.cpp  jmaths_hash.cpp  jmaths_literals.cpp  jmaths_misc.cpp  jmaths_rand.cpp  jmaths_sign_type.cpp  jmaths_tmpl.cpp  jmaths_tmpl.tpp  jmaths_utils.hpp  literals.cpp  rand.cpp  sign_type.cpp  stdincludes.hpp
src/dep/: dependencies.hpp  jmaths_aliases.hpp
src/headers/: N.hpp  N_detail_impl.hpp  N_impl.hpp  Q.hpp  Q_detail_impl.hpp  Q_impl.hpp  TMP.hpp  Z.hpp  Z_detail_impl.hpp  Z_impl.hpp  all.hpp  basic_N.hpp  basic_N_detail_impl.hpp  basic_N_impl.hpp  basic_Q.hpp  basic_Q_detail_impl.hpp  basic_Q_impl.hpp  basic_Z.hpp  basic_Z_detail_impl.hpp  basic_Z_impl.hpp  calc.hpp  calc_impl.hpp  constants_and_types.hpp  constants_and_types.hpp.in  declarations.hpp  def.hh  default_N.hpp  default_Q.hpp  default_Z.hpp  detail.hpp  error.hpp  error_impl.hpp  formatter.hpp  function_timer.hpp  hash.hpp  hash_impl.hpp  jmaths.hpp  jmaths_N.hpp  jmaths_Q.hpp  jmaths_Z.hpp  (+29 more)
test/: CMakeLists.txt  boost_test_gcc_abi_fix.cpp  handle_error_log.cpp  run  test.cpp  test_api_complete_coverage.cpp  test_basic_n.cpp  test_basic_q.cpp  test_basic_z.cpp  test_bitwise.cpp  test_calc.cpp  test_constructors_comprehensive.cpp  test_conversions.cpp  test_edge_cases.cpp  test_exceptions.cpp  test_literals.cpp  test_main.cpp  test_operators.cpp  test_parametric.cpp  test_performance.cpp  test_rand.cpp  unit_test.cpp
unit_testing/: handle_error_log  unit_test.cpp
