find_package(Boost COMPONENTS system filesystem unit_test_framework REQUIRED)
add_executable(jmaths_unit_test)
target_sources(jmaths_unit_test PRIVATE test.cpp)
target_compile_definitions(jmaths_unit_test PRIVATE BOOST_TEST_DYN_LINK)
target_link_libraries(jmaths_unit_test PRIVATE jmaths ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
target_include_directories(jmaths_unit_test PRIVATE ${Boost_INCLUDE_DIRS})
